@@ -1,5 +1,8 @@
 Date	Added
 
+2007/04/13
+	* Added debug command @displayskill. Should be used only by people
+	  searching for new skill IDs. [Skotlex]
 2007/04/12
 	* Updated various mapflags with 11.2 maps [Playtester]
 2007/04/11
